feat(core): Analytics and Offline support
Provide offline support with service workers; Goggle Analytics implemented

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,43 @@
   <meta charset="utf-8">
   <title>RockPaperScissors PWA</title>
   <base href="/">
+  <meta name="description" content="Progressive WebApp of the old fashion game">
 
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- PWA -->
+  <meta name="apple-mobile-web-app-title" content="RockPaperScissors">
+
+
+  <!-- Configured Head Tags  -->
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/ios/icon_120x120.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/icons/ios/icon_152x152.png">
+	<link rel="apple-touch-icon" sizes="167x167" href="/icons/ios/icon_167x167.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/icons/ios/icon_180x180.png">
+	<link rel="apple-touch-icon" sizes="1024x1024" href="/icons/ios/icon_1024x1024.png">
+	<link rel="apple-touch-startup-image" href="/icons/ios/icon_1024x1024.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/icons/android/icon_192x192.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/icons/android/icon_32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/icons/android/icon_96x96.png">
+	<link rel="icon" type="image/png" sizes="144x144" href="/icons/android/icon_144x144.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="/icons/android/icon_192x192.png">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="msapplication-TileColor" content="#00bcd4">
+	<meta name="msapplication-TileImage" content="/icons/android/icon_144x144.png">
+	<meta name="theme-color" content="#00bcd4">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+
+  <!-- analytics -->
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-100643129-1', 'auto');
+    ga('send', 'pageview');
+  </script>
 </head>
 <body>
   <app-root></app-root>
